# cartouche

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README-fr.md  README.md  SECURITY.md  THEMES.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dashboard.yml  release.yml
docs/superpowers/plans/: 2026-06-12-multilang-test-detection.md
docs/superpowers/specs/: 2026-06-12-multilang-test-detection-design.md
examples/annotations/: sample.json
examples/lang/: _overlay.json
examples/workflows/: profile-dashboard.yml  repo-dashboard.yml
squats/: README.md
squats/cartouche-py/: README.md  pyproject.toml
squats/cartouche-py/src/cartouche_py/: __init__.py
squats/cartouchesvg/: README.md  pyproject.toml
squats/cartouchesvg/src/cartouchesvg/: __init__.py
src/cartouche/: __init__.py  __main__.py  cache.py  cli.py  fetch.py  mock.py  themes.py
src/cartouche/lang/: __init__.py  en.json  fr.json
src/cartouche/render/: __init__.py  primitives.py  profile.py  repo.py
src/cartouche/watermarks/: __init__.py
tests/: test_cache.py  test_fetch.py  test_render.py
