[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartouche-svg"
version = "0.2.0"
description = "Technical-drawing SVG dashboards for GitHub repositories and profiles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sandjab", email = "gh-cartouche@gavini.org" },
]
keywords = ["github", "dashboard", "svg", "readme", "stars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]
# Zero runtime dependencies — uses stdlib urllib, json, datetime only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
cartouche = "cartouche.cli:main"

[project.urls]
Homepage      = "https://github.com/Sandjab/cartouche"
Repository    = "https://github.com/Sandjab/cartouche"
Issues        = "https://github.com/Sandjab/cartouche/issues"
Changelog     = "https://github.com/Sandjab/cartouche/blob/main/CHANGELOG.md"
Themes        = "https://github.com/Sandjab/cartouche/blob/main/THEMES.md"
Documentation = "https://github.com/Sandjab/cartouche#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/cartouche"]

# Resource files (language packs, watermark PNGs, py.typed marker)
# must be packaged into the wheel so importlib.resources can find them
# at runtime. py.typed (PEP 561) lets type-checkers like mypy / pyright
# trust our inline type hints in downstream code.
[tool.hatch.build.targets.wheel.force-include]
"src/cartouche/py.typed"               = "cartouche/py.typed"
"src/cartouche/lang/en.json"           = "cartouche/lang/en.json"
"src/cartouche/lang/fr.json"           = "cartouche/lang/fr.json"
"src/cartouche/watermarks/davinci.png" = "cartouche/watermarks/davinci.png"
"src/cartouche/watermarks/floral.png"  = "cartouche/watermarks/floral.png"
"src/cartouche/watermarks/kawai.png"   = "cartouche/watermarks/kawai.png"

[tool.hatch.build.targets.sdist]
# Slim sdist: source + tests + the user-facing docs that users on PyPI
# mirrors (or `pip install --no-binary`) might want. Kept out: the 34
# example SVGs in /examples (~8 MB of preview art that lives on jsDelivr
# anyway), and CLAUDE.md (an internal handoff document for AI-assisted
# contributions, not part of the public API).
include = [
    "/src",
    "/tests",
    "/README.md",
    "/README-fr.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/NOTICE.md",
    "/THEMES.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Curated set: pycodestyle errors+warnings, pyflakes, isort, bugbear,
# pyupgrade. Keeps the bar high without dragging in opinionated style
# rules (D, ANN, TRY, ...) that would noise up a small lib.
select = ["E", "F", "W", "I", "B", "UP"]
# Allow `Optional` and similar; we already use modern syntax everywhere.
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
